fixed maxshift if statements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
   --link-hover-color: #136ff6;
   --background-color: #fff;
   --overlay-background-color: #eee;
-  --highlight-background-color: #c0cfdf;
+  --highlight-background-color: #86b8ee;
   --text-color: #000;
 
   /* fonts */
